     even if it has an id).
   * New [remove_object] tag which removes applied [object]s from matched units;
     it can filter on the entire [object] WML. The most efficient use is to
     remove all objects with a specific duration value.
   * Renamed [foreach] variable= to array=
   * Renamed [foreach] item_var= to variable=
 * Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The old
     function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
   * The built-in conditionals have_unit, have_location, and variable are now
     present in the wesnoth.wml_conditionals table. This means they can be directly
     called, extended with new features, or even overridden with custom implementations.
* Performance:
   * When a heuristic determines that it's probably faster, the game predicts battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles (extremely
     high HP, drain, slow, berserk, etc.) it's significantly faster than the default
     damage calculation method.
* Miscellaneous and bug fixes:
   * Fixed bug in wesnothd that was causing server crashes if game with
     multiple network and local players was ran.

Version 1.13.5:
 * Campaigns:
   * An Orcish Incursion:
     * Linaera can recruit Mage, and cannot recruit Elves
   * Heir to the Throne:
     * Add journey tracks for 19c/20b path.
     * New sprites for Li'sar.
     * S10: Clarify objectives and change egg image on capture.
     * S19c: Removed the undead and the swamps.
   * Tutorial
     * Improve translatability for languages with gender-dependent pronouns