@@ -40,7 +40,7 @@ Night: −25% Damage"
     forest_name_generator= _ << main=$base Forest|$base{!}’s Forest >>
     lake_name_generator= _ << main=$base{!} Lake >>
     mountain_name_generator= _ << main=$base{!}’s Peak|Mount $base >>
-    swamp_name_generator= _ << main=$base{!}’s Swamp|base{!}marsh|$base{!}fen >>
+    swamp_name_generator= _ << main=$base{!}’s Swamp|$base{!}marsh|$base{!}fen >>
 [/naming]
 
 [village_naming]
